--- a/styles.scss
+++ b/styles.scss
@@ -44,6 +44,7 @@ img{
 }
 
 #search_bar{
+    display: block;
     color: $font-color;
     background-color: $search-bar-color;
     border: 0px;
@@ -51,6 +52,7 @@ img{
     min-width: 95%;
     height: 3rem;
     padding: 0px 25px;
+    margin: 0px auto;
 }
 
 #search_bar:focus{
