--- a/styles_advanced_search.scss
+++ b/styles_advanced_search.scss
@@ -3,3 +3,56 @@ $search-bar-color: #4d5156;
 $search-bar-color-focus: #303134;
 $button-color: #303134;
 $font-color: white;
+
+:root {
+    font-family: Google Sans, arial, sans-serif;
+    background-color: $background-color;
+}
+
+.nav_bar {
+    font-family:arial, sans-serif;
+    background-color: $background-color;
+    color: $font-color;
+    padding: 20px;
+    img {
+        height: 2rem;
+        width: auto;
+    }
+    // 目前僅有logo，故暫時註解。若未來有多個文字標籤，可取消註解。
+    // a {
+    //     margin-left: 20px; 
+    //     color: inherit;
+    //     text-decoration: none;
+    // }
+    // a:hover {
+    // color: inherit;
+    // text-decoration: underline;
+    // }   
+}
+
+// TODO: Complete CSS
+
+// .title{
+
+// }
+
+// .subtitle{
+
+// }
+
+
+// .a_kind{
+
+//     .fine{
+
+//     }
+
+//     .box{
+
+//     }
+// }
+
+
+// .button{
+
+// }
