--- a/styles_advanced_search.css
+++ b/styles_advanced_search.css
@@ -14,4 +14,53 @@
   width: auto;
 }
 
+main {
+  padding: 0px 20px;
+  background-color: #202124;
+}
+
+.title {
+  display: block;
+  color: #f28b82;
+  background-color: #202124;
+  font-size: 1.4rem;
+  border-bottom: 1px lightgray solid;
+  padding: 25px 35px;
+}
+
+.subtitle {
+  background-color: #202124;
+  color: white;
+  padding: 25px 35px;
+}
+
+.a_kind {
+  padding: 5px 35px;
+}
+.a_kind .fine {
+  color: gray;
+  width: 12rem;
+}
+.a_kind .box {
+  background-color: #202124;
+  border: solid 1px gray;
+  width: 50vw;
+  color: white;
+}
+
+.button_parent {
+  text-align: right;
+  margin: 10px 0px;
+}
+
+.button {
+  font-weight: 500;
+  background-color: #8ab4f8;
+  border-color: #8ab4f8;
+  color: #202124;
+  border: none;
+  border-radius: 3px;
+  padding: 3px 10px;
+}
+
 /*# sourceMappingURL=styles_advanced_search.css.map */
